@@ -221,3 +221,4 @@ __objc_class_name_NSWindow
 __objc_class_name_NSWindowController
 __objc_class_name__GSWorkspaceCenter
 __objc_class_name_NSWorkspace
+__objc_class_name_GSTheme
